--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
             <div class="about-visual">
                 <div class="cube">
-                    <div class="cube-face front">Solutions</div>
-                    <div class="cube-face back">WEB</div>
-                    <div class="cube-face right">APP</div>
-                    <div class="cube-face left">UI</div>
-                    <div class="cube-face top">hosting</div>
-                    <div class="cube-face bottom">DEV</div>
+                    <div class="cube-face front">Software</div>
+                    <div class="cube-face back">Web Apps</div>
+                    <div class="cube-face right">Mobile Apps</div>
+                    <div class="cube-face left">Consulting</div>
+                    <div class="cube-face top">Projects</div>
+                    <div class="cube-face bottom">Data</div>
                 </div>
             </div>
         </div>
@@ -112,14 +112,14 @@
 <!-- Portfolio Section -->
     <section class="portfolio scroll-animate" id="portfolio">
         <div class="portfolio-container">
-            <h2 class="section-title">Finished Work</h2>
+            <h2 class="section-title">Solutions</h2>
             <div class="portfolio-grid">
                 
                 <div class="project-card">
                     <div class="project-image">📱</div>
                     <div class="project-content">
                         <div class="project-category">Mobile App & Web</div>
-                        <h3 class="project-title">VectraWorkforce</h3>
+                        <h3 class="project-title">VectraForce</h3>
                         <p class="project-description">
                         An e-Human Resource Management (eHRM) system for mobile teams and field staff.
                         </p>
@@ -251,9 +251,9 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="ourteam.html">Our Team</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">About Us/a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
 
@@ -261,10 +261,10 @@
             <div class="footer-section">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="#">Web Development</a></li>
-                    <li><a href="#">Mobile App Development</a></li>
-                    <li><a href="#">UI/UX Design</a></li>
-                    <li><a href="#">Technical Consulting</a></li>
+                    <li><a href="#">Custom Software Solutions</a></li>
+                    <li><a href="#">Web & Mobile App Development</a></li>
+                    <li><a href="#">IT Consultancy & Project Management</a></li>
+                    <li><a href="#">Data Analysis & Reporting</a></li>
                 </ul>
             </div>
 
@@ -272,8 +272,8 @@
             <div class="footer-section">
                 <h4>Contact Info</h4>
                 <p>📧 <a href="mailto:info@vectrakode.com">info@vectrakode.com</a></p>
-                <p>📞 +61 XXXX XXX XXX</p>
-                <p>📍 Pothuhera, Kurunegala</p>
+                <p>📞 +61 0489 200 283</p>
+                <!-- <p>📍 Pothuhera, Kurunegala</p> -->
             </div>
 
             <!-- Social Media Links -->
